# PyAstronautics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-docs.yml  build-package.yml  deploy-docs.yml  release-package.yml  sphinx-docs.yml  test-package.yml
docs/source/: conf.py  index.md
docs/source/_static/: custom.css
docs/source/_static/astrodynamics/three_body_problem/: cr3bp_earthMoon_lagrange_points_plot.html  cr3bp_forbidden_region.html  cr3bp_force_potential.html  cr3bp_mult_forbidden_region.html  cr3bp_non_dim_force_potential.html
docs/source/_static/astrodynamics/two_body_problem/: two_body_example_animation.html
docs/source/astrodynamics/: index.md
docs/source/astrodynamics/three_body_problem/: cr3bp.md  cr3bp_example.md  forbidden_regions.md  index.md  jacobi_constant.md  lagrange.md  non-dim_cr3bp.md  three_body_problem.md
docs/source/astrodynamics/two_body_problem/: index.md  two_body_problem.md
docs/source/reference/: index.md  nomenclature.md
docs/source/reference/release_notes/: 0.0.17-notes.md  0.0.2-notes.md  0.0.20-notes.md  0.0.30-notes.md  0.0.40-notes.md  index.md
src/pyastronautics/astrodynamics/: __int__.py  three_body_problem.py
tests/test_astrodynamics/: test_three_body_problem.py  test_two_body_problem.py
